#pragma once

#include "FlyBehavior.hpp"

class FlyWithWings : public FlyBehavior {
public:
    void fly() const override;
};