#pragma once

#include "QuackBehavior.hpp"

class Quack : public QuackBehavior {
public:
    void quack() const override;
};