#pragma once

#include "QuackBehavior.hpp"

class Squeak : public QuackBehavior {
public:
    void quack() const override;
};